src/c_api.h

typedef void * rwkvmobile_runtime_t;
struct tts_streaming_buffer {
    float * samples;
    int length;
};
int rwkvmobile_runtime_eval_chat_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char ** inputs,
    const int num_inputs, const int max_tokens, void (*callback)(const char *, const int, const char *),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion_async(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_gen_completion_batch_async(rwkvmobile_runtime_t runtime, int model_id, const char ** prompts, const int batch_size, const int max_tokens, const int stop_code, void (*callback_batch)(const int, const char **, const int*, const char **), int disable_cache);
int rwkvmobile_runtime_eval_chat_batch_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char *** inputs, const int * num_inputs,
    const int batch_size, const int max_tokens, void (*callback_batch)(const int, const char **, const int*, const char **),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_sparktts_release_models(rwkvmobile_runtime_t runtime);
int rwkvmobile_runtime_run_spark_tts_streaming_async(rwkvmobile_runtime_t runtime, int model_id, const char * tts_text, const char * prompt_audio_text, const char * prompt_audio_path, const char * output_wav_path);
int rwkvmobile_runtime_run_spark_tts_with_global_tokens_streaming_async(rwkvmobile_runtime_t runtime, int model_id, const char * tts_text, const char * output_wav_path, const int * global_tokens);
int rwkvmobile_runtime_run_spark_tts_with_properties_streaming_async(rwkvmobile_runtime_t runtime, int model_id, const char * tts_text, const char * output_wav_path, const char * age, const char * gender, const char * emotion, const char * pitch, const char * speed);
struct tts_streaming_buffer rwkvmobile_runtime_get_tts_streaming_buffer(rwkvmobile_runtime_t runtime);
int rwkvmobile_runtime_get_tts_streaming_buffer_length(rwkvmobile_runtime_t runtime);
void rwkvmobile_runtime_free_tts_streaming_buffer(struct tts_streaming_buffer buffer);
const int * rwkvmobile_runtime_get_tts_global_tokens_output(rwkvmobile_runtime_t runtime);
int rwkvmobile_runtime_tts_register_text_normalizer(rwkvmobile_runtime_t runtime, const char * path);
float rwkvmobile_runtime_get_prefill_progress(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_load_embedding_model(rwkvmobile_runtime_t runtime, const char *model_path);
int rwkvmobile_load_rerank_model(rwkvmobile_runtime_t runtime, const char *model_path);
int rwkvmobile_get_embedding(rwkvmobile_runtime_t runtime, const char **input, const int input_length,float **embedding);
// platform info
const char * rwkvmobile_get_platform_name();
const char * rwkvmobile_get_soc_name();
const char * rwkvmobile_get_soc_partname();
const char * rwkvmobile_get_htp_arch();
const char * rwkvmobile_dump_log();
const char * rwkvmobile_get_state_cache_info(rwkvmobile_runtime_t runtime, int model_id);
void rwkvmobile_free_state_cache_info(const char * state_cache_info);
void rwkvmobile_set_loglevel(int loglevel);
void rwkvmobile_set_cache_dir(rwkvmobile_runtime_t runtime, const char * cache_dir);