examples/flutter/ffigen/rwkv_mobile.dart


late final _rwkvmobile_runtime_sparktts_release_modelsPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_sparktts_release_models');
late final _rwkvmobile_runtime_sparktts_release_models = _rwkvmobile_runtime_sparktts_release_modelsPtr.asFunction<int Function(rwkvmobile_runtime_t )>();

int rwkvmobile_runtime_run_spark_tts_streaming_async(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> tts_text,
ffi.Pointer<ffi.Char> prompt_audio_text,
ffi.Pointer<ffi.Char> prompt_audio_path,
ffi.Pointer<ffi.Char> output_wav_path,
) {
  return _rwkvmobile_runtime_run_spark_tts_streaming_async(runtime,
model_id,
tts_text,
prompt_audio_text,
prompt_audio_path,
output_wav_path,
);
}

late final _rwkvmobile_runtime_run_spark_tts_streaming_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_run_spark_tts_streaming_async');
late final _rwkvmobile_runtime_run_spark_tts_streaming_async = _rwkvmobile_runtime_run_spark_tts_streaming_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_run_spark_tts_with_global_tokens_streaming_async(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> tts_text,
ffi.Pointer<ffi.Char> output_wav_path,
ffi.Pointer<ffi.Int> global_tokens,
) {
  return _rwkvmobile_runtime_run_spark_tts_with_global_tokens_streaming_async(runtime,
model_id,
tts_text,
output_wav_path,
global_tokens,
);
}

late final _rwkvmobile_runtime_run_spark_tts_with_global_tokens_streaming_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Int> )>>('rwkvmobile_runtime_run_spark_tts_with_global_tokens_streaming_async');
late final _rwkvmobile_runtime_run_spark_tts_with_global_tokens_streaming_async = _rwkvmobile_runtime_run_spark_tts_with_global_tokens_streaming_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Int> )>();

int rwkvmobile_runtime_run_spark_tts_with_properties_streaming_async(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> tts_text,
ffi.Pointer<ffi.Char> output_wav_path,
ffi.Pointer<ffi.Char> age,
ffi.Pointer<ffi.Char> gender,
ffi.Pointer<ffi.Char> emotion,
ffi.Pointer<ffi.Char> pitch,
ffi.Pointer<ffi.Char> speed,
) {
  return _rwkvmobile_runtime_run_spark_tts_with_properties_streaming_async(runtime,
model_id,
tts_text,
output_wav_path,
age,
gender,
emotion,
pitch,
speed,
);
}

late final _rwkvmobile_runtime_run_spark_tts_with_properties_streaming_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_run_spark_tts_with_properties_streaming_async');
late final _rwkvmobile_runtime_run_spark_tts_with_properties_streaming_async = _rwkvmobile_runtime_run_spark_tts_with_properties_streaming_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

tts_streaming_buffer rwkvmobile_runtime_get_tts_streaming_buffer(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_get_tts_streaming_buffer(runtime,
);
}

late final _rwkvmobile_runtime_get_tts_streaming_bufferPtr = _lookup<
    ffi.NativeFunction<tts_streaming_buffer Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_get_tts_streaming_buffer');
late final _rwkvmobile_runtime_get_tts_streaming_buffer = _rwkvmobile_runtime_get_tts_streaming_bufferPtr.asFunction<tts_streaming_buffer Function(rwkvmobile_runtime_t )>();

int rwkvmobile_runtime_get_tts_streaming_buffer_length(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_get_tts_streaming_buffer_length(runtime,
);
}

late final _rwkvmobile_runtime_get_tts_streaming_buffer_lengthPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_get_tts_streaming_buffer_length');
late final _rwkvmobile_runtime_get_tts_streaming_buffer_length = _rwkvmobile_runtime_get_tts_streaming_buffer_lengthPtr.asFunction<int Function(rwkvmobile_runtime_t )>();

void rwkvmobile_runtime_free_tts_streaming_buffer(tts_streaming_buffer buffer,
) {
  return _rwkvmobile_runtime_free_tts_streaming_buffer(buffer,
);
}

late final _rwkvmobile_runtime_free_tts_streaming_bufferPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(tts_streaming_buffer )>>('rwkvmobile_runtime_free_tts_streaming_buffer');
late final _rwkvmobile_runtime_free_tts_streaming_buffer = _rwkvmobile_runtime_free_tts_streaming_bufferPtr.asFunction<void Function(tts_streaming_buffer )>();

ffi.Pointer<ffi.Int> rwkvmobile_runtime_get_tts_global_tokens_output(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_get_tts_global_tokens_output(runtime,
);
}

late final _rwkvmobile_runtime_get_tts_global_tokens_outputPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Int> Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_get_tts_global_tokens_output');
late final _rwkvmobile_runtime_get_tts_global_tokens_output = _rwkvmobile_runtime_get_tts_global_tokens_outputPtr.asFunction<ffi.Pointer<ffi.Int> Function(rwkvmobile_runtime_t )>();

int rwkvmobile_runtime_tts_register_text_normalizer(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> path,
) {
  return _rwkvmobile_runtime_tts_register_text_normalizer(runtime,
path,
);
}

late final _rwkvmobile_runtime_tts_register_text_normalizerPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_tts_register_text_normalizer');
late final _rwkvmobile_runtime_tts_register_text_normalizer = _rwkvmobile_runtime_tts_register_text_normalizerPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>();

double rwkvmobile_runtime_get_prefill_progress(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_prefill_progress(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_prefill_progressPtr = _lookup<
    ffi.NativeFunction<ffi.Float Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_prefill_progress');
late final _rwkvmobile_runtime_get_prefill_progress = _rwkvmobile_runtime_get_prefill_progressPtr.asFunction<double Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_load_embedding_model(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> model_path,
) {
  return _rwkvmobile_load_embedding_model(runtime,
model_path,
);
}

late final _rwkvmobile_load_embedding_modelPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>>('rwkvmobile_load_embedding_model');
late final _rwkvmobile_load_embedding_model = _rwkvmobile_load_embedding_modelPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_load_rerank_model(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> model_path,
) {
  return _rwkvmobile_load_rerank_model(runtime,
model_path,
);
}

late final _rwkvmobile_load_rerank_modelPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>>('rwkvmobile_load_rerank_model');
late final _rwkvmobile_load_rerank_model = _rwkvmobile_load_rerank_modelPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_get_embedding(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Pointer<ffi.Char>> input,
int input_length,
ffi.Pointer<ffi.Pointer<ffi.Float>> embedding,
) {
  return _rwkvmobile_get_embedding(runtime,
input,
input_length,
embedding,
);
}

late final _rwkvmobile_get_embeddingPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Float>> )>>('rwkvmobile_get_embedding');
late final _rwkvmobile_get_embedding = _rwkvmobile_get_embeddingPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Pointer<ffi.Char>> , int , ffi.Pointer<ffi.Pointer<ffi.Float>> )>();

ffi.Pointer<ffi.Char> rwkvmobile_get_platform_name() {
  return _rwkvmobile_get_platform_name();
}

late final _rwkvmobile_get_platform_namePtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('rwkvmobile_get_platform_name');
late final _rwkvmobile_get_platform_name = _rwkvmobile_get_platform_namePtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

ffi.Pointer<ffi.Char> rwkvmobile_get_soc_name() {
  return _rwkvmobile_get_soc_name();
}

late final _rwkvmobile_get_soc_namePtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('rwkvmobile_get_soc_name');
late final _rwkvmobile_get_soc_name = _rwkvmobile_get_soc_namePtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

ffi.Pointer<ffi.Char> rwkvmobile_get_soc_partname() {
  return _rwkvmobile_get_soc_partname();
}

late final _rwkvmobile_get_soc_partnamePtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('rwkvmobile_get_soc_partname');
late final _rwkvmobile_get_soc_partname = _rwkvmobile_get_soc_partnamePtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

ffi.Pointer<ffi.Char> rwkvmobile_get_htp_arch() {
  return _rwkvmobile_get_htp_arch();
}

late final _rwkvmobile_get_htp_archPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('rwkvmobile_get_htp_arch');
late final _rwkvmobile_get_htp_arch = _rwkvmobile_get_htp_archPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

ffi.Pointer<ffi.Char> rwkvmobile_dump_log() {
  return _rwkvmobile_dump_log();
}

late final _rwkvmobile_dump_logPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('rwkvmobile_dump_log');
late final _rwkvmobile_dump_log = _rwkvmobile_dump_logPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

ffi.Pointer<ffi.Char> rwkvmobile_get_state_cache_info(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_get_state_cache_info(runtime,
model_id,
);
}

late final _rwkvmobile_get_state_cache_infoPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_get_state_cache_info');
late final _rwkvmobile_get_state_cache_info = _rwkvmobile_get_state_cache_infoPtr.asFunction<ffi.Pointer<ffi.Char> Function(rwkvmobile_runtime_t , int )>();

void rwkvmobile_free_state_cache_info(ffi.Pointer<ffi.Char> state_cache_info,
) {
  return _rwkvmobile_free_state_cache_info(state_cache_info,
);
}

late final _rwkvmobile_free_state_cache_infoPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> )>>('rwkvmobile_free_state_cache_info');
late final _rwkvmobile_free_state_cache_info = _rwkvmobile_free_state_cache_infoPtr.asFunction<void Function(ffi.Pointer<ffi.Char> )>();

void rwkvmobile_set_loglevel(int loglevel,
) {
  return _rwkvmobile_set_loglevel(loglevel,
);
}

late final _rwkvmobile_set_loglevelPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int )>>('rwkvmobile_set_loglevel');
late final _rwkvmobile_set_loglevel = _rwkvmobile_set_loglevelPtr.asFunction<void Function(int )>();

void rwkvmobile_set_cache_dir(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> cache_dir,
) {
  return _rwkvmobile_set_cache_dir(runtime,
cache_dir,
);
}

late final _rwkvmobile_set_cache_dirPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>>('rwkvmobile_set_cache_dir');
late final _rwkvmobile_set_cache_dir = _rwkvmobile_set_cache_dirPtr.asFunction<void Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>();
